--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -25,19 +25,6 @@ QMainWindow, QDialog {
 	color: #D8D8D8;
 }
 
-QGroupBox  {
-	border: 1px solid #202020;
-	border-radius: 2px;
-	margin-top: 1ex;
-}
-
-QGroupBox::title  {
-	subcontrol-origin: margin;
-	subcontrol-position: top left;
-	padding: 0 3px;
-}
-
-
 QFrame {
 	border-bottom: 1px groove qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop:0 transparent, stop: 0.3 #242424, stop: 0.7 #242424, stop: 1.0 transparent);
 	background: transparent;
@@ -912,3 +899,22 @@ QStackedWidget {
 RatingLabel {
 	border: 1px solid #e8841a;
 }
+
+QGroupBox  {
+	padding-top: 8px;
+	border: 1px solid #202020;
+	border-radius: 2px;
+	margin-top: 1ex;
+	margin-bottom: 2ex;
+	font-weight: bold;
+}
+
+QGroupBox::title  {
+	subcontrol-origin: margin;
+	subcontrol-position: top left;
+	padding-left: 3px;
+	padding-right: 3px;
+}
+
+
+
