--- a/src/GUI/LastFM/GUI_LastFM_Dialog.ui
+++ b/src/GUI/LastFM/GUI_LastFM_Dialog.ui
@@ -67,13 +67,13 @@
      <property name="text">
       <string>OK</string>
      </property>
+     <property name="shortcut">
+      <string notr="true">Return</string>
+     </property>
     </widget>
    </item>
    <item row="4" column="2" colspan="2">
     <widget class="QLineEdit" name="tf_password">
-     <property name="focusPolicy">
-      <enum>Qt::ClickFocus</enum>
-     </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
      </property>
@@ -93,11 +93,7 @@
     </widget>
    </item>
    <item row="3" column="2" colspan="2">
-    <widget class="QLineEdit" name="tf_username">
-     <property name="focusPolicy">
-      <enum>Qt::ClickFocus</enum>
-     </property>
-    </widget>
+    <widget class="QLineEdit" name="tf_username"/>
    </item>
    <item row="2" column="0" rowspan="4">
     <widget class="QWidget" name="widget" native="true">
@@ -156,6 +152,14 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>cb_activate</tabstop>
+  <tabstop>tf_username</tabstop>
+  <tabstop>tf_password</tabstop>
+  <tabstop>btn_login</tabstop>
+  <tabstop>btn_cancel</tabstop>
+  <tabstop>btn_ok</tabstop>
+ </tabstops>
  <resources>
   <include location="../Resources/Icons.qrc"/>
  </resources>
