--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -25,6 +25,19 @@ QMainWindow, QDialog {
 	color: #D8D8D8;
 }
 
+QGroupBox  {
+	border: 1px solid #202020;
+	border-radius: 2px;
+	margin-top: 1ex;
+}
+
+QGroupBox::title  {
+	subcontrol-origin: margin;
+	subcontrol-position: top left;
+	padding: 0 3px;
+}
+
+
 QFrame {
 	border-bottom: 1px groove qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop:0 transparent, stop: 0.3 #242424, stop: 0.7 #242424, stop: 1.0 transparent);
 	background: transparent;
@@ -91,7 +104,6 @@ QListView, QTableView, QTreeView {
 
 QListView:focus, QTableView:focus, QTreeView:focus {
 	border: 1px solid #424e72;
-	background-color: #2c2c2c;
 }
 
 QListView:!focus, QTableView:!focus, QTreeView:!focus {
@@ -430,10 +442,6 @@ QLineEdit:disabled {
 	color: #525252;
 }
 
-QTabWidget QFrame {
-	border: none;
-}
-
 QTabWidget::pane {
 	background-color: #383838;
 	border: 1px solid #2c2c2c;
@@ -497,11 +505,6 @@ QTabBar::tab:selected, QTabBar::tab:hover {
 	background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #555555, stop: 0.4 #484848, stop: 1.0 #383838);
 }
 
-QTabBar::tab:focus {
-	background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #555555, stop: 0.4 #484848, stop: 1.0 #383838);
-}
-
-
 QTabBar::tab:!selected {
 	border-bottom: 1px solid #2c2c2c;
 }
@@ -513,6 +516,11 @@ QTabBar::tab:selected {
 
 QTabBar::close-button {
 	image: url(:/Icons/tool_dark_grey_small.svg.png);
+}
+
+QTabBar::close-button:disabled {
+
+	image: url(:/Icons/close_disabled.svg.png)
 }
 
 QTabBar::close-button:hover {
@@ -741,9 +749,7 @@ QCheckBox::indicator:unchecked {
 	image: url(:/Icons/tool_dark_grey.svg.png);
 }
 
-QCheckBox::indicator:unchecked:hover,
-QCheckBox::indicator:unchecked:focus
-{
+QCheckBox::indicator:unchecked:hover {
 	image: url(:/Icons/tool_grey.svg.png);
 }
 
@@ -757,12 +763,6 @@ QCheckBox::indicator:disabled {
 QCheckBox::indicator:checked:enabled {
 	image: url(:/Icons/tool_orange.svg.png);
 }
-
-QCheckBox::indicator:checked:focus
-{
-	image: url(:/Icons/tool_grey.svg.png);
-}
-
 
 QCheckBox::indicator:pressed {
 	image: url(:/Icons/tool_orange.svg.png);
@@ -806,9 +806,7 @@ QPushButton[flat=false]
 
 }
 
-QPushButton[flat=false]:hover,
-QPushButton[flat=false]:focus
-{
+QPushButton[flat=false]:hover {
 	border: 1px solid #e8841a;
 }
 
@@ -915,22 +913,3 @@ QStackedWidget {
 RatingLabel {
 	border: 1px solid #e8841a;
 }
-
-QGroupBox  {
-	padding-top: 8px;
-	border: 1px solid #202020;
-	border-radius: 2px;
-	margin-top: 1ex;
-	margin-bottom: 2ex;
-	font-weight: bold;
-}
-
-QGroupBox::title  {
-	subcontrol-origin: margin;
-	subcontrol-position: top left;
-	padding-left: 3px;
-	padding-right: 3px;
-}
-
-
-
