library immporter refactoring

--- a/src/GUI/RemoteControl/GUI_RemoteControl.ui
+++ b/src/GUI/RemoteControl/GUI_RemoteControl.ui
@@ -1,53 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>GUI_RemoteControl</class>
- <widget class="QDialog" name="GUI_RemoteControl">
+ <widget class="QWidget" name="GUI_RemoteControl">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>263</width>
-    <height>134</height>
+    <width>400</width>
+    <height>109</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Remote control</string>
-  </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Activate</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QSpinBox" name="sb_port">
-     <property name="maximum">
-      <number>65000</number>
-     </property>
-     <property name="value">
-      <number>54055</number>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="2">
-    <widget class="QDialogButtonBox" name="bb_ok_cancel">
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Port</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
@@ -61,10 +35,10 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Activate</string>
      </property>
     </widget>
    </item>
@@ -82,41 +56,18 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="1">
+    <widget class="QSpinBox" name="sb_port">
+     <property name="maximum">
+      <number>65000</number>
+     </property>
+     <property name="value">
+      <number>54055</number>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>bb_ok_cancel</sender>
-   <signal>accepted()</signal>
-   <receiver>GUI_RemoteControl</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>157</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>bb_ok_cancel</sender>
-   <signal>rejected()</signal>
-   <receiver>GUI_RemoteControl</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
-     <y>274</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
