--- a/src/GUI/LanguageChooser/GUI_LanguageChooser.ui
+++ b/src/GUI/LanguageChooser/GUI_LanguageChooser.ui
@@ -1,49 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>GUI_LanguageChooser</class>
- <widget class="QDialog" name="GUI_LanguageChooser">
+ <widget class="QWidget" name="GUI_LanguageChooser">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>285</width>
-    <height>160</height>
+    <width>400</width>
+    <height>102</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Language</string>
-  </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="4" column="1">
-    <widget class="QPushButton" name="btn_ok">
-     <property name="text">
-      <string>OK</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QComboBox" name="combo_lang">
-     <item>
-      <property name="text">
-       <string>English</string>
-      </property>
-     </item>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0">
     <widget class="QLabel" name="lab_title">
      <property name="font">
       <font>
@@ -57,14 +25,23 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="1" column="0">
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
+   <item row="2" column="0">
+    <widget class="QComboBox" name="combo_lang">
+     <item>
+      <property name="text">
+       <string>English</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="3" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>For new languages I am always looking for translators</string>
