--- a/src/GUI/Notifications/GUI_Notifications.ui
+++ b/src/GUI/Notifications/GUI_Notifications.ui
@@ -1,60 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GUI_Notification</class>
- <widget class="QDialog" name="GUI_Notification">
+ <class>GUI_Notifications</class>
+ <widget class="QWidget" name="GUI_Notifications">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>279</width>
-    <height>169</height>
+    <width>400</width>
+    <height>139</height>
    </rect>
   </property>
-  <property name="focusPolicy">
-   <enum>Qt::ClickFocus</enum>
-  </property>
-  <property name="windowTitle">
-   <string>Notification settings</string>
-  </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0" colspan="2">
-    <widget class="QComboBox" name="combo_notification">
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-     <item>
-      <property name="text">
-       <string>Standard</string>
-      </property>
-     </item>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QSpinBox" name="sb_timeout">
-     <property name="focusPolicy">
-      <enum>Qt::WheelFocus</enum>
-     </property>
-     <property name="minimum">
-      <number>1000</number>
-     </property>
-     <property name="maximum">
-      <number>60000</number>
-     </property>
-     <property name="singleStep">
-      <number>1000</number>
-     </property>
-     <property name="value">
-      <number>5000</number>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="label_3">
-     <property name="text">
-      <string>Timeout (ms)</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="lab_title">
      <property name="font">
@@ -86,19 +42,41 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <widget class="QPushButton" name="btn_ok">
-     <property name="maximumSize">
-      <size>
-       <width>80</width>
-       <height>16777215</height>
-      </size>
-     </property>
+   <item row="3" column="0" colspan="2">
+    <widget class="QComboBox" name="combo_notification">
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
      </property>
+     <item>
+      <property name="text">
+       <string>Standard</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>OK</string>
+      <string>Timeout (ms)</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QSpinBox" name="sb_timeout">
+     <property name="focusPolicy">
+      <enum>Qt::WheelFocus</enum>
+     </property>
+     <property name="minimum">
+      <number>1000</number>
+     </property>
+     <property name="maximum">
+      <number>60000</number>
+     </property>
+     <property name="singleStep">
+      <number>1000</number>
+     </property>
+     <property name="value">
+      <number>5000</number>
      </property>
     </widget>
    </item>
