--- a/src/GUI/PreferenceDialog/GUI_PreferenceDialog.ui
+++ b/src/GUI/PreferenceDialog/GUI_PreferenceDialog.ui
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GUI_FontConfig</class>
- <widget class="QWidget" name="GUI_FontConfig">
+ <class>GUI_PreferenceDialog</class>
+ <widget class="QWidget" name="GUI_PreferenceDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>152</height>
+    <width>844</width>
+    <height>567</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="1" column="1" colspan="2">
     <widget class="QLabel" name="lab_title">
      <property name="font">
       <font>
@@ -21,38 +21,35 @@
       </font>
      </property>
      <property name="text">
-      <string>Fonts</string>
+      <string>Preferences</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="2" column="1" colspan="2">
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Font name</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QComboBox" name="combo_fonts"/>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Font size</string>
+   <item row="4" column="1" colspan="2">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QComboBox" name="combo_sizes"/>
+    <widget class="QListWidget" name="list_preferences">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
-   <item row="4" column="0" colspan="2">
+   <item row="5" column="1" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <spacer name="horizontalSpacer">
@@ -68,20 +65,37 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_default">
+      <widget class="QPushButton" name="btn_cancel">
        <property name="text">
-        <string>Default</string>
+        <string>Cancel</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_apply">
+      <widget class="QPushButton" name="btn_ok">
        <property name="text">
-        <string>Apply</string>
+        <string>OK</string>
        </property>
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="3" column="2">
+    <widget class="QScrollArea" name="widget_preferences">
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="widget_prefere">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>562</width>
+        <height>472</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </item>
   </layout>
  </widget>
