--- a/src/GUI/Shortcuts/GUI_ShortcutEntry.ui
+++ b/src/GUI/Shortcuts/GUI_ShortcutEntry.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>621</width>
-    <height>42</height>
+    <width>646</width>
+    <height>34</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="topMargin">
+    <number>4</number>
+   </property>
+   <property name="bottomMargin">
+    <number>4</number>
+   </property>
    <item>
     <widget class="QLabel" name="lab_description">
      <property name="minimumSize">
