--- a/src/GUI/StreamRecorder/GUI_StreamRecorder.ui
+++ b/src/GUI/StreamRecorder/GUI_StreamRecorder.ui
@@ -6,22 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>357</width>
-    <height>186</height>
+    <width>400</width>
+    <height>150</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Stream Recorder</string>
-  </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="11" column="1" colspan="2">
-    <widget class="QLineEdit" name="le_path">
-     <property name="readOnly">
-      <bool>false</bool>
+   <item row="1" column="0" colspan="4">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="3">
+   <item row="2" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Activate</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" colspan="3">
     <widget class="QCheckBox" name="cb_activate">
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
@@ -31,14 +35,14 @@
      </property>
     </widget>
    </item>
-   <item row="11" column="0">
-    <widget class="QLabel" name="label_2">
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Target path:</string>
+      <string>Create session folder</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1" colspan="3">
+   <item row="3" column="1" colspan="3">
     <widget class="QCheckBox" name="cb_create_session_path">
      <property name="enabled">
       <bool>true</bool>
@@ -55,13 +59,20 @@
     </widget>
    </item>
    <item row="4" column="0">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Activate</string>
+      <string>Target path:</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="3">
+   <item row="4" column="1" colspan="2">
+    <widget class="QLineEdit" name="le_path">
+     <property name="readOnly">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="3">
     <widget class="QPushButton" name="btn_path">
      <property name="maximumSize">
       <size>
@@ -74,44 +85,6 @@
      </property>
      <property name="text">
       <string>...</string>
-     </property>
-    </widget>
-   </item>
-   <item row="14" column="2" colspan="2">
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <widget class="QPushButton" name="btn_cancel">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
-       <property name="text">
-        <string>Cancel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_ok">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
-       <property name="text">
-        <string>OK</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="10" column="0">
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>Create session folder</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="4">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
@@ -168,55 +141,7 @@
  </widget>
  <resources>
   <include location="../Resources/Icons.qrc"/>
+  <include location="../../../../../../Resources/Icons.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>cb_activate</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>btn_path</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>213</x>
-     <y>48</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>401</x>
-     <y>78</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btn_cancel</sender>
-   <signal>clicked()</signal>
-   <receiver>GUI_StreamRecorder</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>257</x>
-     <y>168</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>204</x>
-     <y>96</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>cb_activate</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>le_path</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>265</x>
-     <y>54</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>247</x>
-     <y>133</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
