--- a/src/GUI/Playlist/GUI_PlaylistEntryLook.ui
+++ b/src/GUI/Playlist/GUI_PlaylistEntryLook.ui
@@ -7,12 +7,15 @@
     <x>0</x>
     <y>0</y>
     <width>337</width>
-    <height>249</height>
+    <height>295</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="4" column="0">
     <layout class="QGridLayout" name="gridLayout_2">
+     <property name="spacing">
+      <number>6</number>
+     </property>
      <item row="1" column="0">
       <widget class="QLabel" name="label_4">
        <property name="font">
@@ -25,21 +28,21 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <widget class="QLabel" name="label_9">
        <property name="text">
         <string>Example</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
+     <item row="0" column="2">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string notr="true">%nr%</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
+     <item row="2" column="2">
       <widget class="QLabel" name="label_7">
        <property name="text">
         <string notr="true">%artist%</string>
@@ -59,52 +62,66 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string notr="true">%title%</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="label_8">
-       <property name="text">
-        <string notr="true">%album%</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
+     <item row="0" column="3">
       <widget class="QLabel" name="label_10">
        <property name="text">
         <string>track number</string>
        </property>
       </widget>
      </item>
+     <item row="3" column="2">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string notr="true">%album%</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="2">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string notr="true">%title%</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
       <widget class="QLabel" name="label_11">
        <property name="text">
         <string>title</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
+     <item row="2" column="3">
       <widget class="QLabel" name="label_12">
        <property name="text">
         <string>artist</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="2">
+     <item row="3" column="3">
       <widget class="QLabel" name="label_13">
        <property name="text">
         <string>album</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1" colspan="2">
+     <item row="5" column="2" colspan="2">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string notr="true"> %nr% - '%title%' - %artist%</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0" colspan="4">
+      <widget class="Line" name="line_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1" rowspan="4">
+      <widget class="Line" name="line_5">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
       </widget>
      </item>
@@ -185,6 +202,19 @@
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
+   </item>
+   <item row="4" column="1">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>1</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
